# GeoSinkhorn

./: LICENSE  README.md  pyproject.toml
src/geosink/: cheb_approx.py  conv_sinkhorn.py  heat_kernel.py  sinkhorn.py
tests/: test_conv.py  test_heat.py
